--- a/style.css
+++ b/style.css
@@ -218,7 +218,7 @@ footer {
 
     .logo img {
         align-items: center;
-        max-height: 100%;
+        max-height: 200px;
     }
     .name h1{
         flex: 3;
